# tipitaka

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  clean.py  cluster_plot.py  etl.py  ingest.py  kmeans.py  preprocess.py  pts-etl.py  pyproject.toml  tokenize-words.py  vsi-etl.py
data/curated/2_pali/2_parcan/: milind1u.txt  milind2u.txt  milindou.txt  milindpu.txt  nettip_u.txt  petako_u.txt
data/curated/2_pali/3_chron/: dhatuvau.txt  dipav_2u.txt  dipava1u.txt  dipava2u.txt  dipavmsu.txt  hattha_u.txt  mahava_u.txt
data/curated/2_pali/4_comm/: buvismou.txt  buvismpu.txt  samp_1ou.txt  samp_1pu.txt  samp_2ou.txt  samp_2pu.txt  samp_3ou.txt  samp_3pu.txt  samp_4ou.txt  samp_4pu.txt  samp_5ou.txt  samp_5pu.txt  samp_6ou.txt  samp_6pu.txt  samp_7ou.txt  samp_7pu.txt  visudd_u.txt
data/curated/2_pali/6_suanco/: lokapp_u.txt  upasak_u.txt
data/curated/2_pali/9_phil/: dhkariku.txt  mkacbheu.txt  yaskacsu.txt
flows/: agglomerative.py  cluster_train.py  vsi-etl.py
flows/pts/: cluster_plot.py  cluster_train.py
flows/src/: __init__.py
flows/src/parse_dict/: __init__.py  db_to_sqlite.py
flows/src/parsing/: parse.py
flows/src/utils/: __init__.py  utils.py
flows/vri/: etl.py
src/: __init__.py
src/parse_dict/: __init__.py  db_to_sqlite.py
src/parsing/: __init__.py
src/utils/: __init__.py  duckdb_client.py  utils.py
visualisations/: 01HE1FGHN73WH6X7C7XGMBB692-chart.html  01HE1FH52H0SBJDF7CN7QHKW9C-chart.html  01HE3D3VK6YH94B7CJMK6Z2ABP-chart.html  chart.html
visualisations/kmeans/: chart.html
(+429 files in other folders)
