[tool.poetry]
name = "Project Name"
version = "0.1.0"
description = "Project Description"
authors = ["Authors Names"]

[tool.poetry.dependencies]
python = "3.11.*"
pandas = "^2"
duckdb = "^0.9.1"
chardet = "^5.2.0"
beautifulsoup4 = "^4.12.2"
sktime = "^0.24.0"
tsfresh = "^0.20.1"
nltk = "^3.8.1"
scikit-learn = "^1.3.2"
numpy = "^1.26.1"
polars = "^0.19.11"
pyarrow = "^13.0.0"
tqdm = "^4.66.1"
altair-viewer = "^0.4.0"
altair = "^5"
pyglossary = "^4.6.1"
python-ulid = "^2.2.0"
metaflow = "^2.10.5"
pyreadr = "^0.5.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
nbstripout = "*"
notebook = "*"
rich = "*"
pre-commit = "*"

[tool.poetry.group.docs.dependencies]
pydocstyle = {extras = ["toml"], version = "*"}

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = 'black'

[tool.pydocstyle]
convention = "google"
add-ignore = "D100,D101,D102,D103,D104,D105,D106,D107"
